add image format check to dataset

--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -12,7 +12,9 @@
     "from torch.utils import data\n",
     "from dataset import ImageDataset\n",
     "from utils import pretrain_transform, un_normalize\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import os"
    ]
   },
   {
@@ -34,13 +36,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "saved_model = torch.load(os.path.join('saved_models', '27600.pth'))\n",
+    "G.load_state_dict(saved_model['G'])\n",
+    "F.load_state_dict(saved_model['F'])\n",
+    "Dy.load_state_dict(saved_model['Dy'])\n",
+    "Dx.load_state_dict(saved_model['Dx'])\n",
+    "step = saved_model['step']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset_X = ImageDataset(root='train2014', transform=pretrain_transform())\n",
     "dataset_Y = ImageDataset(root='train2014', transform=pretrain_transform())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainner = GANTrainer(G, F, Dx, Dy, dataset_X, dataset_Y)"
+    "trainner = GANTrainer(G, F, Dx, Dy, dataset_X, dataset_Y, previous_step=step)"
    ]
   },
   {
@@ -84,7 +100,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "image = dataset_X[0].unsqueeze(0)\n",
+    "image.shape\n",
+    "generated = G(image)\n",
+    "plt.imshow(un_normalize(generated)[0])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
